added save per epoch for both training filetypes

--- a/training_model_aws.ipynb
+++ b/training_model_aws.ipynb
@@ -56,7 +56,8 @@
     "                                                                textRNN.dropout_keep_prob:dropout_keep_prob,textRNN.tst:False,\n",
     "                                                                textRNN.is_training_flag:is_training})\n",
     "\n",
-    "        print(\"Batch {} of epoch {} completed, loss = {}\".format(i, n, loss))"
+    "        print(\"Batch {} of epoch {} completed, loss = {}\".format(i, n, loss))\n",
+    "        save_patch = saver.save(sess, \"./vectorai_word_classifier.ckpt\")\n"
    ]
   }
  ],
